--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Street Fighter RPG</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="main-wrapper">
-        <div class="unchosen-player">
+        <div class="unchosen-wrapper">
+            <button id="ken" class="unchosen-fighter" value="Ken"><img src="assets/img/ken.png" alt=""></button>
+            <button id="ryu" class="unchosen-fighter" value="Ryu"><img src="assets/img/ryu.png" alt=""></button>
+            <button id="guile" class="unchosen-fighter" value="Guile"><img src="assets/img/guile.png" alt=""></button>
+
+
+        </div>
+        <div class="user-message">
 
         </div>
         <div class="chosen-player">
@@ -18,7 +26,6 @@
         </div>
         <div class="chosen-opponent"></div>
         <div class="defeated-opponent">
-
         </div>
     </div>
 </body>
