--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="main-wrapper">
-        <div class="user-message"></div>
+        <p class="user-message screen-text"></p>
         <div class="unchosen-wrapper">
             <button id="Ken" class="unchosen-fighter icon" value="Ken"><img src="assets/img/ken.png" alt=""></button>
             <button id="Ryu" class="unchosen-fighter icon" value="Ryu"><img src="assets/img/ryu.png" alt=""></button>
@@ -20,32 +20,31 @@
             <img src="assets/img/ken.png" class="hidden-icon"alt="">
 
         </div>
-        
-
-        </div>
         <div class="battle-wrapper">
             <div class="player-wrapper">
                 <div class="chosen-player">
                     <img src="assets/img/ken.png" class="hidden-icon"alt="">
                 </div>
-                <p id="player-health"></p>
+                <h1 id="player-health"></h1>
                 <button id="attack">Attack!</button>
             </div>
             <div class="arena">
-                    <img src="assets/img/ryu-bg.png" alt="">
+                    <!-- <img src="assets/img/ryu-bg.png" alt=""> -->
             </div>
-
-
-            <div class="chosen-opponent">
-                <img src="assets/img/ken.png" class="hidden-icon"alt="">
-            </div>  
+            <div class="opponent-wrapper">
+                <div class="chosen-opponent">
+                    <img src="assets/img/ken.png" class="hidden-icon"alt="">
+                </div>  
+                <h1 id="opponent-health"></h1>
             </div>
-            <p id="opponent-health"></p>
-        <div class="defeated-opponent icon">
-            <button id="Ken-defeat" class="unchosen-fighter hide-icon" value="Ken"><img src="assets/img/ken-defeated.png" alt=""></button>
-            <button id="Ryu-defeat" class="unchosen-fighter hide-icon" value="Ryu"><img src="assets/img/ryu-defeated.png" alt=""></button>
-            <button id="Guile-defeat" class="unchosen-fighter hide-icon" value="Guile"><img src="assets/img/guile-defeated.png" alt=""></button>
-            <button id="Blanka-defeat" class="unchosen-fighter hide-icon" value="Guile"><img src="assets/img/Blanka-defeated.png" alt=""></button>
+        </div>
+        <div class="defeated-opponent">
+            <p class="screen-text">Defeated</p>
+            <img id="Ken-defeat" class="defeated-fighter hide-icon" src="assets/img/ken-defeated.png" alt="">
+            <img id="Ryu-defeat" class="defeated-fighter hide-icon" src="assets/img/ryu-defeated.png" alt="">
+            <img id="Guile-defeat" class="defeated-fighter hide-icon" src="assets/img/guile-defeated.png" alt="">
+            <img id="Blanka-defeat" class="defeated-fighter hide-icon" src="assets/img/Blanka-defeated.png" alt="">
+            <img src="assets/img/Blanka-defeated.png" class="hidden-icon"alt="">
         </div>
     </div>
 </body>
